Fixed box shadow issue on Firefox

--- a/src/components/desktop/DesktopWindow.scss
+++ b/src/components/desktop/DesktopWindow.scss
@@ -4,7 +4,7 @@
 
 :local(.window) {
   @include background-image(linear-gradient(to bottom, #777, #555));
-  @include filter(drop-shadow(3px 3px 3px black));
+  box-shadow: 0 0 6px black;
   width: 100%;
   height: 100%;
   padding: 8px;
