--- a/src/components/desktop/Dock.scss
+++ b/src/components/desktop/Dock.scss
@@ -50,7 +50,7 @@ $tooltip-opacity: 0.98;
       position: absolute;
       z-index: 2;
       @include bg();
-      @include filter(drop-shadow(0 4px 6px black));
+      box-shadow: 0 3px 5px black;
       @include background-image(linear-gradient(to bottom, rgba($top-gray, $top-gray, $top-gray, $opacity),
                                                            rgba($bottom-gray, $bottom-gray, $bottom-gray, $opacity)));
       display: flex;
